RESOLVED FIXED 103501
[CSS Regions] Fix content node renderers ordering inside the named flow thread
https://bugs.webkit.org/show_bug.cgi?id=103501
Summary [CSS Regions] Fix content node renderers ordering inside the named flow thread
Andrei Bucur
Reported 2012-11-28 03:38:17 PST
The code for adding a content node renderer doesn't respect DOM ordering.
Attachments
Patch (20.08 KB, patch)
2012-11-28 09:45 PST, Andrei Bucur
no flags
Patch (20.04 KB, patch)
2012-11-28 09:49 PST, Andrei Bucur
no flags
Patch (20.30 KB, patch)
2012-11-28 10:15 PST, Andrei Bucur
no flags
Andrei Bucur
Comment 1 2012-11-28 09:45:13 PST
Andrei Bucur
Comment 2 2012-11-28 09:49:23 PST
Andrei Bucur
Comment 3 2012-11-28 10:15:00 PST
Dave Hyatt
Comment 4 2012-11-28 10:19:09 PST
Comment on attachment 176511 [details] Patch r=me
WebKit Review Bot
Comment 5 2012-11-29 00:36:41 PST
Comment on attachment 176511 [details] Patch Clearing flags on attachment: 176511 Committed r136107: <http://trac.webkit.org/changeset/136107>
WebKit Review Bot
Comment 6 2012-11-29 00:36:44 PST
All reviewed patches have been landed. Closing bug.
Andrei Bucur
Comment 7 2012-11-29 02:01:20 PST
*** Bug 103153 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.